--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+##### MacOS
 .DS_Store
-.vscode
+
+##### VisualStudioCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+##### C/C++
+seesaw_main
 *.o
 *.out
